Fixed screen overflow issue

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@
     font-size: 3rem;
     padding-top: 0.7em;
     padding-left: 0.2em;
+    overflow: scroll;
 }
 
 button{
